changing of print width

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proshop",
   "version": "1.0.0",
-  "description": "MERN shopping cart app",
+  "description": "MERN shopping cart app proshop",
   "main": "index.js",
   "type": "module",
   "scripts": {
